files added and updated

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>My website</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 id="demo">Hello</h1>
     <input type="checkbox" name="click" id="click">
-    <button>Click Me</button>
+    <button onclick="myFunction()">Click Me</button>
     <ul>
         <li><a href="#">Google</a></li>
         <li>Microsoft</li>
