--- a/demo1.html
+++ b/demo1.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Demo 1</h1>
-    <button onclick="myFunction1()">Click Me</button>
+    
     <p id="demo"></p>
+    <button onclick="myFunction1()">Click Me</button>
+    <script>window.alert(5+6)</script>
+    <script>console.log(5+6)</script>
     <script src="index.js"></script>    
 </body>
 </html>
