--- a/demo1.html
+++ b/demo1.html
@@ -12,6 +12,7 @@
     <button onclick="myFunction1()">Click Me</button>
     <script>window.alert(5+6)</script>
     <script>console.log(5+6)</script>
+    <button onclick="window.print()">Print</button>
     <script src="index.js"></script>    
 </body>
 </html>
