--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <h1 id="demo">Hello</h1>
     <input type="checkbox" name="click" id="click">
-    <button onclick="myFunction()">Click Me</button>
+    <button id="btn" onclick="myFunction()">Click Me</button>
     <ul>
         <li><a href="#">Google</a></li>
         <li>Microsoft</li>
         <li>Facebook</li>
     </ul>
+    
     <script src="index.js"></script>
 </body>
 </html>
